<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">MediaDownloader</string>

    <string name="dark_mode">Dark Mode</string>

    <string name="delete">Delete</string>

    <string name="download">download</string>
    <string name="download_audio">Download audio</string>
    <string name="download_video">Download video</string>

    <string name="downloading">downloading</string>

    <string name="parsing">parsing…</string>
    <string name="parsing_process_failed">parsing process failed.</string>

    <string name="title_download">Download</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>

    <string name="percentage" translatable="false">"%s %%"</string>
</resources>
