<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_download_video"
        style="@style/text_sheet_options"
        android:text="@string/download_video"
        app:drawableStartCompat="@drawable/ic_video_24" />

    <TextView
        android:id="@+id/text_download_audio"
        style="@style/text_sheet_options"
        android:text="@string/download_audio"
        app:drawableStartCompat="@drawable/ic_audio_24" />

    <TextView
        android:id="@+id/text_delete_record"
        style="@style/text_sheet_options"
        android:text="@string/delete"
        app:drawableStartCompat="@drawable/ic_delete_24" />

</LinearLayout>