<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <action
        android:id="@+id/action_global_open_sheet_more_action"
        app:destination="@+id/nav_sheet_more_action_on_search_record" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="idv.hsu.media.downloader.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="idv.hsu.media.downloader.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_download"
        android:name="idv.hsu.media.downloader.ui.download.DownloadFragment"
        android:label="@string/title_download"
        tools:layout="@layout/fragment_download" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="idv.hsu.media.downloader.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <dialog
        android:id="@+id/nav_sheet_more_action_on_search_record"
        android:name="idv.hsu.media.downloader.ui.sheet.MoreActionOnSearchRecordSheet"
        android:label="More Action"
        tools:layout="@layout/sheet_more_action_on_search_record">
        <argument
            android:name="argSearchAndInfo"
            app:argType="idv.hsu.media.downloader.db.relation.SearchAndInfo" />
    </dialog>
</navigation>